--- a/project4-frontend/src/App.css
+++ b/project4-frontend/src/App.css
@@ -1,3 +1,15 @@
+.nav {
+
+  display: flex !important;
+  justify-content: flex-start;
+  align-items: center;
+  margin-left: 50px;
+}
+
+.dropdown {
+  margin-top: 8px;
+}
+
 .App {
   text-align: center;
 }
