--- a/project4-frontend/src/App.css
+++ b/project4-frontend/src/App.css
@@ -1,6 +1,10 @@
 
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column wrap;
 }
 
 .App-logo {
