--- a/project4-frontend/src/App.css
+++ b/project4-frontend/src/App.css
@@ -1,10 +1,18 @@
+.bg1 {
+  background: red !important;
+  max-width: 800px;
+  height: 100%;
+  position: absolute;
+  right: 500px;
+  top: 500px;
+}
 
 .App {
   text-align: center;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  flex-flow: column wrap;
+  flex-flow: row wrap;
 }
 
 .App-logo {
