--- a/project4-frontend/src/App.css
+++ b/project4-frontend/src/App.css
@@ -7,6 +7,19 @@
 .bg1{
   grid-column-start: 1;
   grid-row-start: 2;
+  grid-row-end: 5;
+  background-image: url("https://i.imgur.com/e4QXWYO.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.bg2 {
+  grid-column-start: 3;
+  grid-row-start: 2;
+  height: 100%;
+  background-image: url("https://i.imgur.com/e4QXWYO.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .content {
@@ -18,7 +31,7 @@
   text-align: center;
   display: grid;
   grid-template-columns: 20% 60% 20%;
-  grid-template-rows: 53px 90%;
+  grid-template-rows: 50px 90%;
 }
 
 .App-logo {
