--- a/project4-frontend/src/pages/ClassPicture/ClassPicture.css
+++ b/project4-frontend/src/pages/ClassPicture/ClassPicture.css
@@ -6,6 +6,8 @@
   justify-content: center !important;
   align-items: center !important;
   padding-top: 100px;
+  margin-bottom: 400px;
+  flex-direction: column;
 }
 
 img {
