--- a/project4-frontend/src/App.css
+++ b/project4-frontend/src/App.css
@@ -8,18 +8,21 @@
   grid-column-start: 1;
   grid-row-start: 2;
   grid-row-end: 5;
-  background-image: url("https://i.imgur.com/e4QXWYO.png");
+  background-image: url("./assets/Cap_Left.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-position: 0px 50px;
+
 }
 
 .bg2 {
   grid-column-start: 3;
   grid-row-start: 2;
   height: 100%;
-  background-image: url("https://i.imgur.com/e4QXWYO.png");
+  background-image: url("https://images8.alphacoders.com/378/378546.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-position: 1px 0;
 }
 
 .content {
