--- a/project4-frontend/src/pages/Home/Home.css
+++ b/project4-frontend/src/pages/Home/Home.css
@@ -1,5 +1,34 @@
 .banner {
   background: #FFE4C4;
-  padding: 50px;
+  padding: 20px;
+  width: 100%;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  display: flex !important;
+  justify-content: flex-start !important;
+  align-items: flex-start !important;
+}
+
+h1 {
+  text-align: left;
+  vertical-align: top;
+  position: relative;
+  bottom: 25px;
+}
+
+.icon {
+  background: black;
+}
+img {
+  width:  215px;
+  margin-bottom: 10px;
+}
+p {
+  margin-top: 20px;
+}
+.Home {
+  display: grid;
+  grid-template-columns: 70% 30%;
+  grid-template-rows: 100px 1fr 100px
 
 }
