--- a/project4-frontend/src/pages/Home/Home.css
+++ b/project4-frontend/src/pages/Home/Home.css
@@ -1,5 +1,5 @@
 .banner {
-  background: #FFE4C4;
+  background: #FFF8DC;
   padding: 20px;
   width: 100%;
   grid-column-start: 1;
@@ -7,8 +7,15 @@
   display: flex !important;
   justify-content: flex-start !important;
   align-items: flex-start !important;
+  color: black !important;
 }
 
+hr {
+  border: none;
+  height: 2px;
+  background: rgba(0, 0, 0, .3);
+
+}
 h1 {
   text-align: left;
   vertical-align: top;
@@ -25,6 +32,7 @@ img {
 }
 p {
   margin-top: 20px;
+  color: white;
 }
 .Home {
   display: grid;
